RT-096-097: Add filter status (website) + refactor posted ticket

--- a/Web/ResellTicketSolution/WebClient.Customer/index.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/index.html
@@ -34,7 +34,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				appId: appConfig.OneSignalAppId,
 				subdomainName: appConfig.SubdomainName,
 				notifyButton: {
-					enable: true,
+					enable: false,
 				}
 			});
 			OneSignal.on('notificationDisplay', function (event) {
