--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -9,51 +8,68 @@
     <link href="../css/bootstrap.css" rel='stylesheet' type='text/css' />
     <link href="../css/style.css" rel='stylesheet' type='text/css' />
     <link href="../css/font-awesome.css" rel="stylesheet">
-    <!-- <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<link href='//fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'> -->
-    <!-- <link rel="stylesheet" href="css/jstarbox.css" type="text/css" media="screen" charset="utf-8" /> -->
+    <link href="../css/jquery-ui.css" rel="stylesheet">
     <link href="../css/rt-style.css" rel='stylesheet' type='text/css' />
+    <link rel="stylesheet" href="../css/bootstrap-datetimepicker.css" />
+    <link rel="manifest" href="/manifest.json">
+    <style>
+        ::placeholder {
+            color: #999;
+            opacity: 1;
+            /* Firefox */
+        }
+
+        :-ms-input-placeholder {
+            /* Internet Explorer 10-11 */
+            color: #999;
+        }
+
+        ::-ms-input-placeholder {
+            /* Microsoft Edge */
+            color: #999;
+        }
+    </style>
     <!-- css -->
 
     <!-- js -->
     <!-- Load React. -->
-    <!-- <script src="../js/react-router-dom.min.js"></script> -->
     <script src="../js/react.development.js" crossorigin></script>
     <script src="../js/react-dom.development.js" crossorigin></script>
-    
     <script src="../js/babel.min.js"></script>
     <!-- Load React. -->
 
-    <script src="../js/jstarbox.js"></script>
+    <script src="../js/jstarbox.js" type="text/jQuery"></script>
     <script src="../js/jquery-1.11.1.min.js"></script>
     <script src="../js/moment.js"></script>
     <script src="../js/bootstrap.js"></script>
     <script src="../helper/convertStatus.js"></script>
     <script src="../js/numeral.min.js"></script>
-    <link rel="manifest" href="/manifest.json">
-	<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-	<script type="module">
-		import {appConfig} from '../constant/appConfig.js';
-		var OneSignal = window.OneSignal || [];
-		OneSignal.push(function () {
-			OneSignal.init({
-				appId: appConfig.OneSignalAppId,
-				subdomainName: appConfig.SubdomainName,
-				notifyButton: {
-					enable: false,
-				}
-			});
-			OneSignal.on('notificationDisplay', function (event) {
-				alert(event.content);
-				//console.log(event);
-			});
-		});
-	</script>
+    <script src="../js/bootstrap-datetimepicker.min.js"></script>
+
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script type="module">
+        import { appConfig } from '../constant/appConfig.js';
+        var OneSignal = window.OneSignal || [];
+        OneSignal.push(function () {
+            OneSignal.init({
+                appId: appConfig.OneSignalAppId,
+                subdomainName: appConfig.SubdomainName,
+                notifyButton: {
+                    enable: false,
+                }
+            });
+            OneSignal.on('notificationDisplay', function (event) {
+                alert(event.content);
+                //console.log(event);
+            });
+        });
+    </script>
+    <!-- <script src="./postedTicket.js" type="text/babel"></script> -->
+    <!-- <script src="../helper/Api.js"></script> -->
+    <script src="./postEditTicket_2.js" type="module"></script>
     <!-- //js -->
 </head>
-<!-- <script src="./postedTicket.js" type="text/babel"></script> -->
-<script src="./postedTicket_2.js" type="module"></script>
-<script src="../helper/Api.js"></script>
+
 
 <body>
     <div class="header">
@@ -129,10 +145,6 @@
         <div class="container">
             <div class="banner-info">
                 <h3 style="color: #c7ad71">RESELL TICKET</h3>
-                <a class="btn-post-ticket" id="btnPostTicket">
-                    <i class="fa fa-plus" style="color: #fff"></i>
-                    POST TICKET
-                </a>
             </div>
         </div>
     </div>
@@ -140,15 +152,94 @@
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
     <script src="../js/jquery.vide.min.js"></script>
 
-    <div class="text-center margin-top-20" id="btnStatuses">
-
-    </div>
-    
     <!--content-->
     <div class="content-top">
         <div class="container">
-            <div id="ticket-container">
-                <!-- TicketList -->
+            <div class="main-agileits form-post-ticket" style="margin-bottom: 100px">
+                <div class="form-w3agile form1">
+                    <h3 id="title"></h3>
+                    <span id="invalidField"></span>
+                    <form autocomplete="off" class="form-horizontal">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <label>Vehicle</label>
+                                <!-- <i class="fa fa-" aria-hidden="true"></i> -->
+                                <select class="form-control" id="select-vehicle" style="height: 34px; width: 100%; ">
+                                </select>
+                            </div>
+                            <div class="col-md-4">
+                                <label>Transportation</label>
+                                <div class="autocomplete" id="transportation">
+                                    <!-- onkeyup="getTransportation()" -->
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <label>Ticket Type</label>
+                                <div class="autocomplete" id="ticketType">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row" style="margin-top: 30px">
+                            <div class="col-md-4">
+                                <label>Departure City</label>
+                                <div class="autocomplete" id="departureCity">
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <label>Departure Station</label>
+                                <div class="autocomplete" id="departureStation">
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <label>Departure Date:</label>
+                                <input type="text" placeholder="Departure Date" id="departureDate"
+                                    class="form-control" />
+                                <!-- onblur="setDepartureDate()" -->
+                            </div>
+                        </div>
+                        <div class="row" style="margin-top: 30px">
+                            <div class="col-md-4">
+                                <label>Arrival City:</label>
+                                <div class="autocomplete" id="arrivalCity">
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <label>Arrival Station:</label>
+                                <div class="autocomplete" id="arrivalStation">
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <label>Arrival Date:</label>
+                                <input type="text" placeholder="Arrival Date" id="arrivalDate" class="form-control"
+                                    disabled>
+                            </div>
+                        </div>
+                        <div class="row" style="margin-top: 30px">
+                            <div class="col-md-3">
+                                <label>Ticket Code:</label>
+                                <input type="text" placeholder="Ticket Code" id="ticketCode" class="form-control" />
+                            </div>
+                            <div class="col-md-3">
+                                <label>Passenger Name:</label>
+                                <input type="text" placeholder="Passenger Name" id="passengerName"
+                                    class="form-control" />
+                            </div>
+                            <div class="col-md-3">
+                                <label>Email Booking:</label>
+                                <input type="text" placeholder="Email Booking" id="emailBooking" class="form-control" />
+                            </div>
+                            <div class="col-md-3">
+                                <label>Selling Price:</label>
+                                <input type="text" placeholder="Selling Price" id="sellingPrice" class="form-control" />
+                            </div>
+
+                        </div>
+                        <div class="row" style="margin-top: 30px; text-align: center" id="btnEvent">
+
+                            <!-- <input type="button" value="POST NOW" class="btn-post-now" onclick="postTicket()" /> -->
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
