view and create

--- a/Web/ResellTicketSolution/WebClient.Customer/login.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/login.html
@@ -168,6 +168,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				localStorage.setItem('USERNAME', responeData.username);
 				localStorage.setItem('TOKEN', responeData.token);
 				localStorage.setItem('PHONENUMBER', responeData.phoneNumber);
+				localStorage.setItem('ID', responeData.id.toString());
 				window.location.href = 'index.html';
 			}
 		}
