--- a/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
@@ -152,7 +152,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             </li>
                             <li><a href="#" class="hyper"><span>My Routes</span></a></li>
                             <li><a href="#" class="hyper"> <span>My Tours</span></a></li>
-                            <li><a href="#" class="hyper"> <span>Credit Card</span></a></li>
+                            <li><a href="./creditCard/ListCareditCardView.html" class="hyper"> <span>Credit Card</span></a></li>
                             <li><a href="#" class="hyper"> <span>Transactions</span></a></li>
                         </ul>
                     </div>
