view credit cards + create credit card with stripe + fix bug View list Credit Card Mobile

--- a/Web/ResellTicketSolution/WebClient.Customer/creditCard/ListCreditCardView.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/creditCard/ListCreditCardView.html
@@ -135,7 +135,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             </li>
                             <li><a href="#" class="hyper"><span>My Routes</span></a></li>
                             <li><a href="#" class="hyper"> <span>My Tours</span></a></li>
-                            <li><a href="./createCreditCardView.html" class="hyper"> <span>Credit Card</span></a></li>
+                            <li><a href="./ListCreditCardView.html" class="hyper"> <span>Credit Card</span></a></li>
                             <li><a href="#" class="hyper"> <span>Transactions</span></a></li>
                         </ul>
                     </div>
@@ -162,37 +162,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 
     </script>
-
+    <a href="./createCreditCardView.html"><button type="button" style="position: absolute; left: 100px; top: 52%"
+            class="btn btn-success btn-lg">Add Credit Card</button></a>
     <div class="login">
+
         <div class="main-agileits" style="width: 45%;">
             <div class="form-w3agile form">
                 <h3>View List Credit card</h3>
                 <table class="table table-striped">
                     <tbody id="credit-card-list">
-                        <tr>
-                            <td style="font-size: 12pt" class="col-sm-6">**** **** ***** 42424 &nbsp;&nbsp;&nbsp;
-                                <span style="color: green" class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-                            </td>
-                            <td class="col-sm-1"><img alt="Credit Card Logos" title="Credit Card Logos"
-                                    src="https://seeklogo.com/images/V/VISA-logo-F3440F512B-seeklogo.com.png" width="60"
-                                    height="40" /></td>
-                            <td class="col-sm-1"><button type="button" id="btn-delete"
-                                    class="btn btn-info btn-sm" style="visibility: hidden" ></button></td>
-                            <td class="col-sm-1"><button type="button" id="btn-delete"
-                                    class="btn btn-info btn-sm" style="visibility: hidden" ></button></td>
-                        </tr>
-                        <tr>
-                            <td style="font-size: 12pt" class="col-sm-6">**** **** ***** 42424 &nbsp;&nbsp;&nbsp;
-                                <!-- <span style="color: green" class="glyphicon glyphicon-ok" aria-hidden="true"></span> -->
-                            </td>
-                            <td class="col-sm-1"><img alt="Credit Card Logos" title="Credit Card Logos"
-                                    src="https://www.cbanque.com/i/media/02i/002338iac5.jpg" width="60" height="40" />
-                            </td>
-                            <td class="col-sm-1"><button type="button" id="btn-delete"
-                                    class="btn btn-info btn-sm">Delete</button></td>
-                            <td class="col-sm-1"><button type="button" id="btn-set-default"
-                                    class="btn btn-info btn-sm">Set Default</button></td>
-                        </tr>
                     </tbody>
                 </table>
 
