sửa link, sửa layout

--- a/Web/ResellTicketSolution/WebClient.Customer/creditCard/ListCreditCardView.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/creditCard/ListCreditCardView.html
@@ -129,13 +129,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </div>
                     <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
                         <ul class="nav navbar-nav ">
-                            <li class="active"><a href="./../updateProfile.html" class="hyper"><span>Profile</span></a>
+                            <li><a href="/updateProfile.html" class="hyper"><span>Profile</span></a>
                             </li>
-                            <li><a href="./../postedTicket/postedTicket.html" class="hyper"><span>My Tickets</span></a>
+                            <li><a href="/postedTicket/postedTicket.html" class="hyper"><span>My Tickets</span></a>
                             </li>
-                            <li><a href="#" class="hyper"><span>My Routes</span></a></li>
-                            <li><a href="#" class="hyper"> <span>My Tours</span></a></li>
-                            <li><a href="./ListCreditCardView.html" class="hyper"> <span>Credit Card</span></a></li>
+                            <li class="active"><a href="/creditCard/ListCreditCardView.html" class="hyper"> <span>Credit Card</span></a></li>
                             <li><a href="#" class="hyper"> <span>Transactions</span></a></li>
                         </ul>
                     </div>
@@ -151,7 +149,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!--banner-->
     <div class="banner-top">
         <div class="container">
-            <h3>Update Profile</h3>
+            <h3>List Credit Card</h3>
             <h4><a href="./../index.html">Home</a><label>/</label>My Credit Card</h4>
             <div class="clearfix"> </div>
         </div>
@@ -162,8 +160,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 
     </script>
-    <a href="./createCreditCardView.html"><button type="button" style="position: absolute; left: 100px; top: 52%"
-            class="btn btn-success btn-lg">Add Credit Card</button></a>
     <div class="login">
 
         <div class="main-agileits" style="width: 45%;">
@@ -173,9 +169,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <tbody id="credit-card-list">
                     </tbody>
                 </table>
-
-
-
+                <a style="text-decoration: none" href="./createCreditCardView.html"><button type="button" class="btn btn-large btn-block btn-warning">Add Credit
+                        Card</button></a>
                 </form>
             </div>
 
