--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
@@ -124,12 +124,11 @@
                     </div>
                     <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
                         <ul class="nav navbar-nav ">
-                            <li><a href="../updateProfile.html" class="hyper"><span>Profile</span></a></li>
-                            <li class="active"><a href="postedTicket.html" class="hyper"><span>My Tickets</span></a>
+                            <li><a href="/updateProfile.html" class="hyper"><span>Profile</span></a>
                             </li>
-                            <li><a href="#" class="hyper"><span>My Routes</span></a></li>
-                            <li><a href="#" class="hyper"> <span>My Tours</span></a></li>
-                            <li><a href="#" class="hyper"> <span>Credit Card</span></a></li>
+                            <li class="active"><a href="/postedTicket/postedTicket.html" class="hyper"><span>My Tickets</span></a>
+                            </li>
+                            <li><a href="/creditCard/ListCreditCardView.html" class="hyper"> <span>Credit Card</span></a></li>
                             <li><a href="#" class="hyper"> <span>Transactions</span></a></li>
                         </ul>
                     </div>
