--- a/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
@@ -147,12 +147,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </div>
                     <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
                         <ul class="nav navbar-nav ">
-                            <li class="active"><a href="updateProfile.html" class="hyper"><span>Profile</span></a></li>
-                            <li><a href="./postedTicket/postedTicket.html" class="hyper"><span>My Tickets</span></a>
+                            <li class="active"><a href="/updateProfile.html" class="hyper"><span>Profile</span></a>
                             </li>
-                            <li><a href="#" class="hyper"><span>My Routes</span></a></li>
-                            <li><a href="#" class="hyper"> <span>My Tours</span></a></li>
-                            <li><a href="./creditCard/ListCreditCardView.html" class="hyper"> <span>Credit Card</span></a></li>
+                            <li><a href="/postedTicket/postedTicket.html" class="hyper"><span>My Tickets</span></a>
+                            </li>
+                            <li><a href="/creditCard/ListCreditCardView.html" class="hyper"> <span>Credit
+                                        Card</span></a></li>
                             <li><a href="#" class="hyper"> <span>Transactions</span></a></li>
                         </ul>
                     </div>
@@ -297,8 +297,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <button type="button" onclick="updateProfile()" class="btn btn-large btn-block btn-warning">Update
                         Profile</button>
                     <a href="changePasswordProfile.html" style="text-decoration: none;">
-                        <input type="button"
-                            class="btn btn-large btn-block btn-warning" value="Change Password"/>
+                        <input type="button" class="btn btn-large btn-block btn-warning" value="Change Password" />
                     </a>
                 </form>
             </div>
@@ -343,7 +342,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </div>
     <!-- //footer-->
     <a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
-    
+
 
 </body>
 
