--- a/Web/ResellTicketSolution/WebClient.Customer/creditCard/createCreditCardView.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/creditCard/createCreditCardView.html
@@ -130,13 +130,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </div>
                     <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
                         <ul class="nav navbar-nav ">
-                            <li class="active"><a href="./../updateProfile.html" class="hyper"><span>Profile</span></a>
+                            <li><a href="/updateProfile.html" class="hyper"><span>Profile</span></a>
                             </li>
-                            <li><a href="./../postedTicket/postedTicket.html" class="hyper"><span>My Tickets</span></a>
+                            <li><a href="/postedTicket/postedTicket.html" class="hyper"><span>My Tickets</span></a>
                             </li>
-                            <li><a href="#" class="hyper"><span>My Routes</span></a></li>
-                            <li><a href="#" class="hyper"> <span>My Tours</span></a></li>
-                            <li><a href="./ListCreditCardView.html" class="hyper"> <span>Credit Card</span></a></li>
+                            <li class="active"><a href="/creditCard/ListCreditCardView.html" class="hyper"> <span>Credit
+                                        Card</span></a></li>
                             <li><a href="#" class="hyper"> <span>Transactions</span></a></li>
                         </ul>
                     </div>
@@ -152,8 +151,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!--banner-->
     <div class="banner-top">
         <div class="container">
-            <h3>Update Profile</h3>
-            <h4><a href="./../index.html">Home</a><label>/</label>My Credit Card</h4>
+            <h3>Create Credit Card</h3>
+            <h4><a href="/index.html">Home</a><label>/</label>My Credit Card<label>/</label>Create Credit Card</h4>
             <div class="clearfix"> </div>
         </div>
     </div>
