--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postedTicket.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postedTicket.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -20,7 +19,7 @@
     <!-- <script src="../js/react-router-dom.min.js"></script> -->
     <script src="../js/react.development.js" crossorigin></script>
     <script src="../js/react-dom.development.js" crossorigin></script>
-    
+
     <script src="../js/babel.min.js"></script>
     <!-- Load React. -->
 
@@ -31,24 +30,24 @@
     <script src="../helper/convertStatus.js"></script>
     <script src="../js/numeral.min.js"></script>
     <link rel="manifest" href="/manifest.json">
-	<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-	<script type="module">
-		import {appConfig} from '../constant/appConfig.js';
-		var OneSignal = window.OneSignal || [];
-		OneSignal.push(function () {
-			OneSignal.init({
-				appId: appConfig.OneSignalAppId,
-				subdomainName: appConfig.SubdomainName,
-				notifyButton: {
-					enable: false,
-				}
-			});
-			OneSignal.on('notificationDisplay', function (event) {
-				alert(event.content);
-				//console.log(event);
-			});
-		});
-	</script>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script type="module">
+        import { appConfig } from '../constant/appConfig.js';
+        var OneSignal = window.OneSignal || [];
+        OneSignal.push(function () {
+            OneSignal.init({
+                appId: appConfig.OneSignalAppId,
+                subdomainName: appConfig.SubdomainName,
+                notifyButton: {
+                    enable: false,
+                }
+            });
+            OneSignal.on('notificationDisplay', function (event) {
+                alert(event.content);
+                //console.log(event);
+            });
+        });
+    </script>
     <!-- //js -->
 </head>
 <!-- <script src="./postedTicket.js" type="text/babel"></script> -->
@@ -108,12 +107,12 @@
                     </div>
                     <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
                         <ul class="nav navbar-nav ">
-                            <li><a href="../updateProfile.html" class="hyper"><span>Profile</span></a></li>
-                            <li class="active"><a href="postedTicket.html" class="hyper"><span>My Tickets</span></a>
+                            <li><a href="/updateProfile.html" class="hyper"><span>Profile</span></a>
                             </li>
-                            <li><a href="#" class="hyper"><span>My Routes</span></a></li>
-                            <li><a href="#" class="hyper"> <span>My Tours</span></a></li>
-                            <li><a href="#" class="hyper"> <span>Credit Card</span></a></li>
+                            <li class="active"><a href="/postedTicket/postedTicket.html" class="hyper"><span>My Tickets</span></a>
+                            </li>
+                            <li><a href="/creditCard/ListCreditCardView.html" class="hyper"> <span>Credit
+                                        Card</span></a></li>
                             <li><a href="#" class="hyper"> <span>Transactions</span></a></li>
                         </ul>
                     </div>
@@ -143,7 +142,7 @@
     <div class="text-center margin-top-20" id="btnStatuses">
 
     </div>
-    
+
     <!--content-->
     <div class="content-top">
         <div class="container">
