--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
@@ -45,7 +45,7 @@
     <script src="../helper/convertStatus.js"></script>
     <script src="../js/numeral.min.js"></script>
     <script src="../js/bootstrap-datetimepicker.min.js"></script>
-
+    <script type="module" src="/bank/displayConnectBankButton.js"></script>
     <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
     <script type="module">
         import { appConfig } from '../constant/appConfig.js';
@@ -127,6 +127,8 @@
                             <li><a href="/updateProfile.html" class="hyper"><span>Profile</span></a>
                             </li>
                             <li class="active"><a href="/postedTicket/postedTicket.html" class="hyper"><span>My Tickets</span></a>
+                            </li>
+                            <li id="btn-reload"><a id="link-connect" class="hyper"><span id="value-link"></span></a>
                             </li>
                             <li><a href="/creditCard/ListCreditCardView.html" class="hyper"> <span>Credit Card</span></a></li>
                             <li><a href="#" class="hyper"> <span>Transactions</span></a></li>
