--- a/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
@@ -39,6 +39,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <script type="text/javascript" src="js/authen.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script type="module" src="/bank/createSttripeConnectBankAccount.js"></script>
+    <script type="module" src="/bank/displayConnectBankButton.js"></script>
     <script type="module">
         import { appConfig } from './constant/appConfig.js';
         var OneSignal = window.OneSignal || [];
@@ -52,13 +54,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             });
             OneSignal.on('notificationDisplay', function (event) {
                 alert(event.content);
-                //console.log(event);
             });
         });
     </script>
 
     <script type="text/javascript">
         async function getCustomerProfile() {
+
             var usernameDefault = localStorage.getItem("USERNAME");
             var respone = await fetch(baseUrl() + 'api/customer/getCustomerByUsename?usename=' + usernameDefault, {
                 method: "GET",
@@ -72,7 +74,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 window.location.href = 'index.html';
             } else {
                 var responeData = await respone.json();
-                console.log("response: ", responeData);
                 document.getElementsByName("txtUsername")[0].value = usernameDefault;
                 document.getElementsByName("txtFullname")[0].value = responeData.fullName;
                 document.getElementsByName("txtPhoneNumber")[0].value = responeData.phoneNumber;
@@ -83,7 +84,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </script>
 </head>
 
-<body onload="checkLoginProfile();getCustomerProfile();checkLogin()">
+<body onload="checkLoginProfile();getCustomerProfile();checkLogin();">
     <div class="header">
 
         <div class="container">
@@ -151,7 +152,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             </li>
                             <li><a href="/postedTicket/postedTicket.html" class="hyper"><span>My Tickets</span></a>
                             </li>
-                            <li><a href="/creditCard/ListCreditCardView.html" class="hyper"> <span>Credit
+                            <li id="btn-reload"><a id="link-connect" class="hyper"><span id="value-link"></span></a>
+                            </li>
+                            </li>
+                            <li><a href="/creditCard/ListCreditCardView.html" class="hyper"><span>Credit
                                         Card</span></a></li>
                             <li><a href="#" class="hyper"> <span>Transactions</span></a></li>
                         </ul>
