RT-100: Add Liability Tickets Manager

--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
@@ -38,6 +38,7 @@
     <script src="../js/babel.min.js"></script>
     <!-- Load React. -->
 
+    <script type="text/javascript" src="../js/authen.js"></script>
     <script src="../js/jstarbox.js" type="text/jQuery"></script>
     <script src="../js/jquery-1.11.1.min.js"></script>
     <script src="../js/moment.js"></script>
@@ -79,11 +80,12 @@
                             marketplace</span></a>
                 </h1>
             </div>
+            <div class="head-t" id="isLoggin"></div>
 
             <div class="head-t" id="showing-option">
                 <ul class="card">
                     <li>
-                        <h4>Welcome <span id="welcome-name">Huy0933</span>!!!</h4>
+                        <h4>Welcome <span id="welcome-name"></span>!!!</h4>
                     </li>
                     <li>
                         <h4><a href="../updateProfile.html"><i class="fa fa-user" aria-hidden="true"></i>Me</a>
