RT-104-105: Not yet

--- a/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
@@ -242,7 +242,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     //window.location.href = 'index.html';
                 }
             } else {
-                alert("Something wrong!!");
+                //alert("Something wrong!!");
             }
         }
     </script>
@@ -288,7 +288,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </div>
                     <label>Phone Number:</label>
                     <div class="key">
-                        <i class="fa fa-lock" aria-hidden="true"></i>
+                        <i class="fa fa-phone" aria-hidden="true"></i>
                         <input type="text" placeholder="Phone Number" name="txtPhoneNumber" readonly>
                         <div class="clearfix"></div>
                     </div>
