--- a/Web/ResellTicketSolution/WebClient.Customer/creditCard/ListCreditCardView.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/creditCard/ListCreditCardView.html
@@ -64,6 +64,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </head>
 
 <body onload="checkLoginProfile();checkLogin()">
+    <div id="dialog-confirm-credit-card"></div>
     <div class="header">
 
         <div class="container">
@@ -135,7 +136,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             </li>
                             <li id="btn-reload"><a id="link-connect" class="hyper"><span id="value-link"></span></a>
                             </li>
-                            <li class="active"><a href="/creditCard/ListCreditCardView.html" class="hyper"> <span>Credit Card</span></a></li>
+                            <li class="active"><a href="/creditCard/ListCreditCardView.html" class="hyper"> <span>Credit
+                                        Card</span></a></li>
                             <li><a href="#" class="hyper"> <span>Transactions</span></a></li>
                         </ul>
                     </div>
@@ -163,7 +165,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
     </script>
     <div class="login">
-
         <div class="main-agileits" style="width: 45%;">
             <div class="form-w3agile form">
                 <h3>View List Credit card</h3>
@@ -171,7 +172,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <tbody id="credit-card-list">
                     </tbody>
                 </table>
-                <a style="text-decoration: none" href="./createCreditCardView.html"><button type="button" class="btn btn-large btn-block btn-warning">Add Credit
+                <a style="text-decoration: none" href="./createCreditCardView.html"><button type="button"
+                        class="btn btn-large btn-block btn-warning">Add Credit
                         Card</button></a>
                 </form>
             </div>
