--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
@@ -155,6 +155,11 @@
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
     <script src="../js/jquery.vide.min.js"></script>
 
+    <!-- Confirm Dialog -->
+    <div id="dialog-delete-pending-posted-ticket"></div>
+    <div id="dialog-confirm-ticket-rename"></div>
+    <div id="dialog-refuse-ticket-rename"></div>
+
     <!--content-->
     <div class="content-top">
         <div class="container">
