--- a/Web/ResellTicketSolution/WebClient.Customer/route/routeDetail.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/routeDetail.html
@@ -31,7 +31,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- //js -->
 </head>
 
-<body onload="checkLogin();checkLoginProfile();">
+<body onload="checkLogin()">
 
 	<div class="header">
 		<div class="container">
@@ -113,10 +113,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="clearfix"> </div>
 		</div>
 	</div>
-
-	<!-- Confirm Dialog -->
-	<div id="dialog-delete-route-detail"></div>
-	<div id="dialog-confirm-buyer-detail"></div>
 
 	<!-- faqs -->
 	<div class="container">
